# DLA_Lab

./: .gitattributes  .gitignore  AI_USAGE.md  CODE_OF_CONDUCT.ipynb  CODE_OF_CONDUCT.md  DLA-Lab1.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt
DLA_1/: ASSIGNMENT.ipynb  ASSIGNMENT.md  DLA-Lab1.ipynb  DLA_1.ipynb  LAB_1.1.ipynb  README.md  Regole_generali.txt  Untitled-1.ipynb  engine.py  environment.yml  pyproject.toml
DLA_1/config/: config.yaml
DLA_1/exploratory/: Esperimenti_di_prova.ipynb  README.md
DLA_1/notebooks/: 01_eda_and_feature_baseline.ipynb  02_finetuning_pipeline.ipynb  02b_pipeline_consolidation.ipynb  03_improvements_and_retrieval.ipynb  03b_retrieval_training_free_classification.ipynb  Esperimenti_di_prova.ipynb  README.md
DLA_1/results/: README.md  baseline_history.csv  dataset_summary.json  improved_history.csv  run_validation_summary.csv  test_metrics.csv
DLA_2/: ASSIGNMENT.ipynb  ASSIGNMENT.md  DLA_2.ipynb  README.md
DLA_2/results/: README.md  (+5 more)
DLA_3/: ASSIGNMENT.ipynb  ASSIGNMENT.md  DLA_3.ipynb  Lab_3.ipynb  README.md
DLA_Lab1/: DLA-Lab1.html  DLA-Lab1.ipynb  Valutazione Complessiva delle Casistiche.docx
DLA_Lab2/: 3.2.html  3.2.ipynb  DLA-Lab2.html  DLA-Lab2.ipynb  README.md  Untitled-1.html  Untitled-1.ipynb  dla2.docx  exercise_3_2_clip_lora.html  exercise_3_2_clip_lora.ipynb
Reinforcment LLM/: Esercizio.txt  EsercizioProf.txt  LineeGuida.txt  Recap.docx
_archive/: README.md
tools/: audit_submission.py  build_report_assets.py  prepare_submission_docs.py  smoke_notebooks.py  strip_large_notebook_media.py
(+93 files in other folders)
